--- a/React-Spring-tailwindDemo-Backend/src/main/resources/application.properties
+++ b/React-Spring-tailwindDemo-Backend/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=React-spring
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 jwt.secret=my-super-secret-key-for-jwt-signing-256-bit-long-123456
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
